# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  25 Sep 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix /etc/init.d/bootmisc not to kill pidfiles of running
    daemons.  Improve NGPT support in /sbin/rc a bit.

  23 Sep 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix my last screwup with /etc/init.d/net.ppp0.  Basically
    forgot to change a few DEVICE's to IFACE ...

  22 Sep 2002; Martin Schlemmer <azarah@gentoo.org>:

    NGPT support.

  17 Sep 2002; Martin Schlemmer <azarah@gentoo.org>:

    Did a small fix to /etc/init.d/net.eth0, thanks to
    naanyaar2000@yahoo.com, bug #7407.

  16 Sep 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add the permission stuff for generic scsi when compiled as
    module, thanks to Bauno <bauno@inwind.it>.

    Add support for /etc/devfs.d/ for additional devfs config
    stuff .. idea from Denys Duchier <Denys.Duchier@ps.uni-sb.de>.

  11 Sep 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix small type-o from last changes to /etc/init.d/netmount.
    Should resolve bug #7803.

* rc-scripts 1.4.0 (7 Sep 2002)

  7 Sep 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update /etc/init.d/net.eth0 to handle individual broadcast
    and netmask for aliases.  Should close bug #7407.

    Give /var/run/utmp and /var/log/wtmp the proper permissions
    and ownership.  First steps in fixing bug #7630.

    Change Raid stuff again in /etc/init.d/checkfs.

  26 Aug 2002; Donny Davies <woodchip@gentoo.org>:

    Give root a 'root' GECOS in /etc/passwd, was NULL before.

* rc-scripts 1.3.9 (25 Aug 2002)

  25 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update /sbin/rc to fix some spelling/slang mistakes.  Closes
    bug #6887.

    Move /etc/init.d/net.ppp0 's config to /etc/conf.d/net.ppp0.
    This closes bug #6378.
